--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
@@ -125,7 +121,7 @@
         android:layout_height="wrap_content"
         android:text="Login as Admin"
         android:layout_marginTop="40dp"
-        android:background="@drawable/roundedbuttonbg"
+        android:background="@color/colorPrimary"
         android:layout_marginLeft="100dp"
 
         android:textColor="#ffffff"
@@ -134,5 +130,3 @@
         android:layout_marginRight="100dp"/>
 
 </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
