--- a/app/src/main/res/layout/activity_loginemail.xml
+++ b/app/src/main/res/layout/activity_loginemail.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
@@ -18,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/agonaikalogo"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"/>
 
@@ -52,9 +49,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Company Name"
-            android:imeOptions="actionNext"
-            android:singleLine="true"/>
+            android:hint="Company Name" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -63,9 +58,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email"
-                android:imeOptions="actionNext"
-                android:singleLine="true"/>
+                android:hint="Email" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -74,9 +67,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-               />
+                    android:hint="Password" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -95,7 +86,7 @@
                         android:textColor="@color/colorPrimary"/>
 
                     <TextView
-                        android:id="@+id/textViewforgotpassword"
+                        android:id="@+id/textView5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -104,24 +95,7 @@
                         android:layout_marginRight="10dp"
                         android:textColor="@color/colorPrimary"/>
                 </LinearLayout>
-
-                <Button
-                    android:id="@+id/emaillogintbn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="100dp"
-                    android:layout_marginRight="100dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/roundedbuttonbg"
-                    android:textColor="#ffffff"
-                    android:textStyle="bold"
-                    android:text="Sign In" />
             </android.support.design.widget.TextInputLayout>
         </android.support.design.widget.TextInputLayout>
     </android.support.design.widget.TextInputLayout>
 </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
