--- a/app/src/main/res/layout/activity_loginemail.xml
+++ b/app/src/main/res/layout/activity_loginemail.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/agonaikalogo"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"/>
 
@@ -52,7 +52,9 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Company Name" />
+            android:hint="Company Name"
+            android:imeOptions="actionNext"
+            android:singleLine="true"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -61,7 +63,9 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email" />
+                android:hint="Email"
+                android:imeOptions="actionNext"
+                android:singleLine="true"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -70,7 +74,9 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password" />
+                    android:hint="Password"
+                    android:inputType="textPassword"
+               />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -89,7 +95,7 @@
                         android:textColor="@color/colorPrimary"/>
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/textViewforgotpassword"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -98,6 +104,21 @@
                         android:layout_marginRight="10dp"
                         android:textColor="@color/colorPrimary"/>
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/emaillogintbn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginRight="100dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/roundedbuttonbg"
+                    android:textColor="#ffffff"
+                    android:textStyle="bold"
+                    android:text="Sign In" />
             </android.support.design.widget.TextInputLayout>
         </android.support.design.widget.TextInputLayout>
     </android.support.design.widget.TextInputLayout>
