--- a/app/src/main/res/layout/activity_clockin.xml
+++ b/app/src/main/res/layout/activity_clockin.xml
@@ -218,7 +218,7 @@
                     android:textColor="#ffffff"/>
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/clockoutbtn"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginLeft="30dp"
@@ -263,6 +263,7 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#004d00"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
         >
         <LinearLayout
             android:layout_width="fill_parent"
@@ -292,6 +293,22 @@
             android:textSize="15dp"
             android:textColor="#ffffff"
             />
+
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/navigation" />
 </RelativeLayout>
