--- a/app/src/main/res/layout/activity_facercognition.xml
+++ b/app/src/main/res/layout/activity_facercognition.xml
@@ -76,7 +76,7 @@
                         android:background="@drawable/roundedbuttonbg"
                         android:textColor="#ffffff"
                         android:textStyle="bold"
-                        android:text="Manage Time" />
+                        android:text="Verify" />
 
     </LinearLayout>
 
