--- a/app/src/main/res/layout/activity_clockin.xml
+++ b/app/src/main/res/layout/activity_clockin.xml
@@ -247,7 +247,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:layout_marginTop="25dp"
                 android:id="@+id/card1"
                 app:cardBackgroundColor="#004d00"
@@ -261,53 +261,53 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:layout_centerHorizontal="true"
-                    android:layout_gravity="center_horizontal"
-                    android:text="You last clocked out Tue 08/01/19 04:30 pm"
+                    android:layout_gravity="center"
+                    android:text="View Time Card"
                     android:textSize="15dp"
                     android:textColor="#ffffff"
                     />
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="#004d00"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/card1"
-                android:layout_marginTop="10dp"
-                >
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_gravity="center">
-                    <ImageView
-                        android:id="@+id/imageView6"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignTop="@+id/imageView3"
-                        app:srcCompat="@drawable/multipleuser"
-                        android:background="@drawable/roundedimgbg"
-                        android:layout_marginRight="20dp"/>
-                    <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginBottom="4dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_gravity="center_horizontal"
-                        android:text="Switch To Multiple Users"
-                        android:textSize="15dp"
-                        android:textColor="#ffffff"
-                        />
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--app:cardBackgroundColor="#004d00"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:layout_below="@+id/card1"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--&gt;-->
+                <!--<LinearLayout-->
+                    <!--android:layout_width="fill_parent"-->
+                    <!--android:layout_height="fill_parent"-->
+                    <!--android:orientation="horizontal"-->
+                    <!--android:gravity="center"-->
+                    <!--android:layout_gravity="center">-->
+                    <!--<ImageView-->
+                        <!--android:id="@+id/imageView6"-->
+                        <!--android:layout_width="30dp"-->
+                        <!--android:layout_height="30dp"-->
+                        <!--android:layout_alignParentStart="true"-->
+                        <!--android:layout_alignTop="@+id/imageView3"-->
+                        <!--app:srcCompat="@drawable/multipleuser"-->
+                        <!--android:background="@drawable/roundedimgbg"-->
+                        <!--android:layout_marginRight="20dp"/>-->
+                    <!--<TextView-->
+                        <!--android:id="@+id/textView12"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_alignParentTop="true"-->
+                        <!--android:layout_marginTop="4dp"-->
+                        <!--android:layout_marginBottom="4dp"-->
+                        <!--android:layout_centerHorizontal="true"-->
+                        <!--android:layout_gravity="center_horizontal"-->
+                        <!--android:text="Switch To Multiple Users"-->
+                        <!--android:textSize="15dp"-->
+                        <!--android:textColor="#ffffff"-->
+                        <!--/>-->
 
 
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+                <!--</LinearLayout>-->
+            <!--</android.support.v7.widget.CardView>-->
 
 
         </LinearLayout>
