--- a/app/src/main/res/layout/activity_timesheet.xml
+++ b/app/src/main/res/layout/activity_timesheet.xml
@@ -58,12 +58,20 @@
     </android.support.v7.widget.Toolbar>
 
         <TextView
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Kunata Logic, Victoria Island"
             android:textColor="@color/colorPrimary"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="?attr/actionBarSize"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview1"
+        android:layout_width="fill_parent"
+        android:layout_below="@+id/location"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="?attr/actionBarSize"/>
 
 
 
