--- a/app/src/main/res/layout/activity_clockin.xml
+++ b/app/src/main/res/layout/activity_clockin.xml
@@ -38,18 +38,31 @@
             android:textSize="20dp"
             android:textColor="#ffffff"
             />
-        <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-        android:text="Tuesday, 08 January"
-        android:textSize="18dp"
-            android:textStyle="bold"
-        android:textColor="#ffffff"
-        />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:text="Tuesday, 08 January"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="#ffffff"
+                />
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:text="Ebuka Nwudo"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="#ffffff"
+                />
+
         </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
@@ -69,6 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp"
         android:layout_alignTop="@+id/imageView3"
         app:srcCompat="@drawable/menu" />
 
@@ -76,7 +90,8 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginTop="87dp"
+        android:layout_above="@+id/navigation"
         >
         <LinearLayout
             android:layout_width="fill_parent"
@@ -208,7 +223,7 @@
 
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/clockinbtn"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginLeft="50dp"
@@ -218,7 +233,7 @@
                     android:textColor="#ffffff"/>
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/clockoutbtn"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_marginLeft="30dp"
@@ -234,6 +249,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="25dp"
+                android:id="@+id/card1"
                 app:cardBackgroundColor="#004d00"
                 >
 
@@ -252,46 +268,66 @@
                     />
             </android.support.v7.widget.CardView>
 
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="#004d00"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/card1"
+                android:layout_marginTop="10dp"
+                >
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_gravity="center">
+                    <ImageView
+                        android:id="@+id/imageView6"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignTop="@+id/imageView3"
+                        app:srcCompat="@drawable/multipleuser"
+                        android:background="@drawable/roundedimgbg"
+                        android:layout_marginRight="20dp"/>
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="4dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Switch To Multiple Users"
+                        android:textSize="15dp"
+                        android:textColor="#ffffff"
+                        />
+
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
 
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
 
-    <android.support.v7.widget.CardView
+
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#004d00"
         android:layout_alignParentBottom="true"
-        >
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_gravity="center">
-            <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/imageView3"
-                app:srcCompat="@drawable/multipleuser"
-                android:background="@drawable/roundedimgbg"
-                android:layout_marginRight="20dp"/>
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:text="Switch To Multiple Users"
-            android:textSize="15dp"
-            android:textColor="#ffffff"
-            />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/navigation" />
 </RelativeLayout>
