--- a/app/src/main/res/layout/activity_daytime.xml
+++ b/app/src/main/res/layout/activity_daytime.xml
@@ -265,7 +265,52 @@
         </LinearLayout>
 
     </LinearLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginTop="30dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_weight="1">
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+        android:text="W"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"/>
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/clock"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="IN"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"/>
+
+        <EditText
+            android:layout_width="70dp"
+            android:layout_height="25dp"
+            android:background="#ffffff"
+            android:layout_marginLeft="10dp"
+            android:text="8:00"/>
+
+    </LinearLayout>
+
+
+
+
+    </LinearLayout>
     </LinearLayout>
 
 
