--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -153,7 +153,7 @@
                             android:textColor="@color/colorPrimary"/>
 
                         <Button
-                            android:id="@+id/reg_next_one"
+                            android:id="@+id/reg_next_two"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Next"
