don reg and dashboard

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,6 +2,7 @@
 
 <android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,7 +12,7 @@
     android:layout_gravity="center"
     android:id="@+id/home_lin"
     android:gravity="top"
-    android:layout_marginTop="20dp"
+    android:layout_marginTop="80dp"
     android:orientation="vertical" >
 
     <!---->
@@ -47,10 +48,50 @@
         android:layout_height="wrap_content"
         android:text="Mobile Workforce"
         android:gravity="center"
-        android:textSize="28dp"
+        android:textSize="18dp"
         android:textStyle="bold"
         android:layout_marginTop="8dp"
         android:textColor="@color/colorPrimary"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/comp_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Company_name"
+            android:imeOptions="actionNext"
+            android:singleLine="true"/>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email"
+        android:imeOptions="actionNext"
+        android:singleLine="true"/>
+
+
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="textPassword"
+        />
+    </android.support.design.widget.TextInputLayout>
+    </android.support.design.widget.TextInputLayout>
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:id="@+id/email_login"
@@ -63,9 +104,7 @@
         android:bottomLeftRadius="10dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
-
-        android:drawableLeft="@android:drawable/ic_dialog_email"
-        android:drawablePadding="2dip"
+         android:drawablePadding="2dip"
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
         android:singleLine="true"
@@ -73,7 +112,16 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="14dp"
         android:layout_marginRight="40dp"
-        android:text="Sign in with Email" />
+        android:text="Sign in" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Or"
+        android:textSize="22dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/colorPrimary"
+        android:layout_gravity="center"/>
 
     <Button
         android:id="@+id/button2"
@@ -119,15 +167,33 @@
         android:layout_marginTop="14dp"
         android:layout_marginRight="40dp"
         android:text="Sign in with Facebook"  />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textColor="@color/colorPrimary"
+            android:text="Forgot password?"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:id="@+id/forgotpassword_label"
+            android:layout_weight="1"/>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20dp"
+    android:textSize="15dp"
     android:textColor="@color/colorPrimary"
-    android:text="not registered? Register"
+    android:text="First time here? Register"
     android:layout_marginLeft="40dp"
     android:layout_marginTop="20dp"
-    android:id="@+id/register_label"/>
+    android:layout_marginRight="10dp"
+    android:id="@+id/register_label"
+    android:layout_weight="1"/>
+
+    </LinearLayout>
     <Button
         android:id="@+id/button4"
         android:layout_width="match_parent"
@@ -138,6 +204,7 @@
         android:layout_marginLeft="100dp"
         android:textColor="#ffffff"
         android:textStyle="bold"
+        android:layout_marginBottom="40dp"
 
         android:layout_marginRight="100dp"/>
 
