--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -6,43 +6,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Timeentry">
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:id="@+id/toolbar"
-        >
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:minHeight="?attr/actionBarSize"-->
+        <!--android:id="@+id/toolbar"-->
+        <!--&gt;-->
 
-    </android.support.v7.widget.Toolbar>
-
-
+    <!--</android.support.v7.widget.Toolbar>-->
 
 
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="12dp"
-        app:srcCompat="@drawable/back" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:layout_alignTop="@+id/imageView3"
-        app:srcCompat="@drawable/menu" />
+
+    <!--<ImageView-->
+        <!--android:id="@+id/back_reg_2"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_marginTop="12dp"-->
+        <!--android:layout_marginLeft="12dp"-->
+        <!--app:srcCompat="@drawable/back" />-->
+
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView4"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_alignTop="@+id/imageView3"-->
+        <!--app:srcCompat="@drawable/menu" />-->
 
 
     <android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
+
         xmlns:android="http://schemas.android.com/apk/res/android">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:text="Mobile Workforce"
                 android:gravity="center"
-                android:textSize="28dp"
+                android:textSize="18dp"
                 android:textColor="@color/colorPrimary"/>
 
 
@@ -87,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:text="Register"
                 android:gravity="center"
-                android:textSize="28dp"
+                android:textSize="18dp"
                 android:textColor="@color/colorPrimary"/>
 
             <android.support.design.widget.TextInputLayout
@@ -114,6 +114,8 @@
                         android:id="@+id/last_name"
                         android:layout_height="wrap_content"
                         android:hint="Last Name"
+                        android:imeOptions="actionNext"
+                        android:singleLine="true"
 
                         />
 
@@ -129,6 +131,8 @@
                                 android:layout_height="wrap_content"
                                 android:id="@+id/employee_id"
                                 android:hint="Employee ID"
+                                android:imeOptions="actionNext"
+                                android:singleLine="true"
 
                                 />
 
@@ -143,6 +147,8 @@
                                     android:layout_height="wrap_content"
                                     android:id="@+id/company_name"
                                     android:hint="Company"
+                                    android:imeOptions="actionNext"
+                                    android:singleLine="true"
 
                                     />
 
