--- a/app/src/main/res/layout/activity_registration1.xml
+++ b/app/src/main/res/layout/activity_registration1.xml
@@ -6,38 +6,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Timeentry">
-<android.support.v7.widget.Toolbar
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:minHeight="?attr/actionBarSize"
-    android:id="@+id/toolbar"
-    >
+<!--<android.support.v7.widget.Toolbar-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/colorPrimary"-->
+    <!--android:minHeight="?attr/actionBarSize"-->
+    <!--android:id="@+id/toolbar"-->
+    <!--&gt;-->
+    <!--<ImageView-->
+        <!--android:id="@+id/back_reg_1"-->
+        <!--android:layout_width="20dp"-->
+        <!--android:layout_height="20dp"-->
 
-</android.support.v7.widget.Toolbar>
+        <!--android:layout_marginTop="12dp"-->
+        <!--android:layout_marginLeft="12dp"-->
+        <!--app:srcCompat="@drawable/back" />-->
+
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView4"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_alignTop="@+id/imageView3"-->
+        <!--app:srcCompat="@drawable/menu" />-->
+<!--</android.support.v7.widget.Toolbar>-->
 
 
 
 
 
-<ImageView
-android:id="@+id/imageView3"
-android:layout_width="20dp"
-android:layout_height="20dp"
-android:layout_alignParentStart="true"
-android:layout_alignParentTop="true"
-android:layout_marginTop="12dp"
-android:layout_marginLeft="12dp"
-app:srcCompat="@drawable/back" />
 
-<ImageView
-android:id="@+id/imageView4"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_alignParentEnd="true"
-android:layout_marginRight="10dp"
-android:layout_alignTop="@+id/imageView3"
-app:srcCompat="@drawable/menu" />
 
 
 <android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
@@ -77,7 +76,7 @@ app:srcCompat="@drawable/menu" />
             android:layout_height="wrap_content"
             android:text="Mobile Workforce"
             android:gravity="center"
-            android:textSize="28dp"
+            android:textSize="18dp"
             android:textColor="@color/colorPrimary"/>
 
 
@@ -87,7 +86,7 @@ app:srcCompat="@drawable/menu" />
             android:layout_height="wrap_content"
             android:text="Register"
             android:gravity="center"
-            android:textSize="28dp"
+            android:textSize="18dp"
             android:textColor="@color/colorPrimary"/>
 
         <android.support.design.widget.TextInputLayout
