--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,215 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
-<android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
-    android:layout_width="match_parent"
-
-    xmlns:android="http://schemas.android.com/apk/res/android">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@android:color/transparent"
-    android:layout_gravity="center"
-    android:id="@+id/home_lin"
-    android:gravity="top"
-    android:layout_marginTop="80dp"
-    android:orientation="vertical" >
-
-    <!---->
-    <!--<android.support.v7.widget.ActionBarContextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content">-->
-    <!--</android.support.v7.widget.ActionBarContextView>-->
-
-
-    <TextView
-        android:id="@+id/textView2"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="center"
-        android:text="Welcome To"
-        android:textColor="@color/colorPrimary"
-        android:textSize="28dp"
-        android:textStyle="bold"/>
+        android:overScrollMode="never"
+        >
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/agonaikalogo"
-        android:layout_marginTop="2dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"/>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="center"
-        android:text="Mobile Workforce"
-        android:textColor="@color/colorPrimary"
-        android:textSize="18dp"
-        android:textStyle="bold"/>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/comp_name"
-            android:layout_width="match_parent"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/home_lin"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="Company_name"
-            android:imeOptions="actionNext"
-            android:singleLine="true"/>
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:imeOptions="actionNext"
-        android:singleLine="true"/>
+            android:background="@android:color/transparent"
+            android:orientation="vertical">
+
+            <!---->
+            <!--<android.support.v7.widget.ActionBarContextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content">-->
+            <!--</android.support.v7.widget.ActionBarContextView>-->
 
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:text="Welcome To"
+                android:textColor="@color/colorPrimary"
+                android:textSize="15dp"
+                android:textStyle="bold" />
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="2dp"
+                app:srcCompat="@drawable/agonaikalogo" />
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        />
-    </android.support.design.widget.TextInputLayout>
-    </android.support.design.widget.TextInputLayout>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:text="Mobile Workforce"
+                android:textColor="@color/colorPrimary"
+                android:textSize="10dp"
+                android:textStyle="bold" />
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/comp_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Company_name"
+                    android:imeOptions="actionNext"
+                    android:singleLine="true" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Email"
+                        android:imeOptions="actionNext"
+                        android:singleLine="true" />
 
 
-    <Button
-        android:id="@+id/email_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-         android:drawablePadding="2dip"
-        android:paddingLeft="30dip"
-        android:paddingRight="26dip"
-        android:singleLine="true"
-        android:gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginRight="40dp"
-        android:text="Sign in" />
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Or"
-        android:textSize="22dp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/colorPrimary"
-        android:layout_gravity="center"/>
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/password"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Password"
+                            android:inputType="textPassword" />
+                    </android.support.design.widget.TextInputLayout>
+                </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:textColor="#dd4b39"
-        android:textStyle="bold"
-        android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+            </android.support.design.widget.TextInputLayout>
 
-        android:drawableLeft="@drawable/googleplus"
-        android:drawablePadding="2dip"
-        android:paddingLeft="30dip"
-        android:paddingRight="26dip"
-        android:singleLine="true"
-        android:gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginRight="40dp"
-        android:text="Sign in with Google"  />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#3b5999"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+            <Button
+                android:id="@+id/email_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="40dp"
+                android:background="@color/colorPrimary"
+                android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:drawablePadding="2dip"
+                android:gravity="center"
+                android:paddingLeft="30dip"
+                android:paddingRight="26dip"
+                android:singleLine="true"
+                android:text="Sign in"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp" />
 
-        android:drawableLeft="@drawable/facebook"
-        android:drawablePadding="2dip"
-        android:paddingLeft="30dip"
-        android:paddingRight="26dip"
-        android:singleLine="true"
-        android:gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginRight="40dp"
-        android:text="Sign in with Facebook"  />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:textColor="@color/colorPrimary"
-            android:text="Forgot password?"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="20dp"
-            android:id="@+id/forgotpassword_label"
-            android:layout_weight="1"/>
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="15dp"
-    android:textColor="@color/colorPrimary"
-    android:text="First time here? Register"
-    android:layout_marginLeft="40dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="10dp"
-    android:id="@+id/register_label"
-    android:layout_weight="1"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="Or"
+                android:textColor="@color/colorPrimary"
+                android:textSize="22dp" />
 
-    </LinearLayout>
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login as Admin"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/roundedbuttonbg"
-        android:layout_marginLeft="100dp"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:layout_marginBottom="40dp"
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="40dp"
+                android:background="#ffffff"
+                android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:drawableLeft="@drawable/googleplus"
 
-        android:layout_marginRight="100dp"/>
+                android:drawablePadding="2dip"
+                android:gravity="center"
+                android:paddingLeft="30dip"
+                android:paddingRight="26dip"
+                android:singleLine="true"
+                android:text="Sign in with Google"
+                android:textColor="#dd4b39"
+                android:textStyle="bold"
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="40dp"
+                android:background="#3b5999"
+                android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:drawableLeft="@drawable/facebook"
+
+                android:drawablePadding="2dip"
+                android:gravity="center"
+                android:paddingLeft="30dip"
+                android:paddingRight="26dip"
+                android:singleLine="true"
+                android:text="Sign in with Facebook"
+                android:textColor="#ffffff"
+                android:textStyle="bold"
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/forgotpassword_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1"
+                    android:text="Forgot password?"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:id="@+id/register_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:text="First time here? Register"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="15dp" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="100dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/roundedbuttonbg"
+                android:text="Login as Admin"
+                android:textColor="#ffffff"
+
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
