--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -42,7 +42,7 @@
 
     <android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
         android:layout_width="match_parent"
-
+        android:layout_marginTop="?attr/actionBarSize"
         xmlns:android="http://schemas.android.com/apk/res/android">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -65,8 +65,8 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
                 app:srcCompat="@drawable/agonaikalogo"
                 android:layout_marginTop="2dp"
                 android:layout_gravity="center"/>
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:text="Mobile Workforce"
                 android:gravity="center"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:textColor="@color/colorPrimary"/>
 
 
@@ -87,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:text="Register"
                 android:gravity="center"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:textColor="@color/colorPrimary"/>
 
             <android.support.design.widget.TextInputLayout
