made latest changes

--- a/app/src/main/res/layout/activity_registration1.xml
+++ b/app/src/main/res/layout/activity_registration1.xml
@@ -62,13 +62,13 @@
 
 
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            app:srcCompat="@drawable/agonaikalogo"
-            android:layout_marginTop="2dp"
-           android:layout_gravity="center"/>
+        <!--<ImageView-->
+            <!--android:id="@+id/imageView"-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--app:srcCompat="@drawable/agonaikalogo"-->
+            <!--android:layout_marginTop="2dp"-->
+           <!--android:layout_gravity="center"/>-->
 
         <TextView
             android:id="@+id/textView"
@@ -80,14 +80,14 @@
             android:textColor="@color/colorPrimary"/>
 
 
-        <TextView
+        <!--<TextView-->
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Register"
-            android:gravity="center"
-            android:textSize="15dp"
-            android:textColor="@color/colorPrimary"/>
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Register"-->
+            <!--android:gravity="center"-->
+            <!--android:textSize="15dp"-->
+            <!--android:textColor="@color/colorPrimary"/>-->
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
