--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,18 +27,22 @@
             <!--</android.support.v7.widget.ActionBarContextView>-->
 
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
+            <!--<TextView-->
+                <!--android:id="@+id/textView2"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="8dp"-->
+                <!--android:fontFamily="@font/roboto"-->
+                <!--android:gravity="center"-->
+                <!--android:text="Welcome To"-->
+                <!--android:textColor="@color/colorPrimary"-->
+                <!--android:textSize="15dp"-->
+              <!--android:textStyle="bold" />-->
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/roboto"
-                android:gravity="center"
-                android:text="Welcome To"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15dp"
-                android:textStyle="bold" />
-
+                android:orientation="horizontal"
+                android:layout_gravity="center">
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="100dp"
@@ -51,14 +55,15 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_gravity="center"
                 android:fontFamily="@font/roboto"
                 android:gravity="center"
                 android:text="Mobile Workforce"
+                android:layout_marginLeft="10dp"
                 android:textColor="@color/colorPrimary"
-                android:textSize="10dp"
+                android:textSize="10sp"
                 android:textStyle="bold" />
-
+            </LinearLayout>
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -67,7 +72,7 @@
                     android:id="@+id/comp_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Company_name"
+                    android:hint="Member"
                     android:imeOptions="actionNext"
                     android:singleLine="true" />
 
@@ -86,14 +91,16 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                       app:passwordToggleEnabled="true">
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Password"
-                            android:inputType="textPassword" />
+                            android:inputType="textPassword"
+                            />
                     </android.support.design.widget.TextInputLayout>
                 </android.support.design.widget.TextInputLayout>
 
@@ -189,7 +196,7 @@
                     android:layout_weight="1"
                     android:text="Forgot password?"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="15dp" />
+                    android:textSize="13dp" />
 
                 <TextView
                     android:id="@+id/register_label"
@@ -201,7 +208,7 @@
                     android:layout_weight="1"
                     android:text="First time here? Register"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="15dp" />
+                    android:textSize="13dp" />
 
             </LinearLayout>
 
