--- a/app/src/main/res/menu/menu_general.xml
+++ b/app/src/main/res/menu/menu_general.xml
@@ -4,8 +4,8 @@
     <item
         android:id="@+id/settings"
         android:title="Settings"/>
-    <item
-        android:id="@+id/logout"
-        android:title="Log out"/>
+    <!--<item-->
+        <!--android:id="@+id/logout"-->
+        <!--android:title="Log out"/>-->
 
 </menu>
